infra/k8s/hasher-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hasher
spec:
  clusterIP: None
  selector:
    app: hasher
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
